shell tutorial: moving about

--- a/_posts/2016-01-14-01_Unix_Shell.md
+++ b/_posts/2016-01-14-01_Unix_Shell.md
@@ -92,7 +92,139 @@ and hit enter to begin the lesson. From now on, input will just be
 shown and you should enter it.
 
 
+## Navigating Files and Directories
+
+### Commands
+* `pwd` (print working directory)
+* `ls` (list directory)
+* `cd` (change directory)
+
+Commands generally take *arguments* (what to operate on, required) and
+*options* (modify the standard behavior, optional).
+
+{% highlight bash %}
+command_name -v -o optarg --long-opt  arg1 arg2
+{% endhighlight %}
+
+Often, omitting the argument also works and a default is assumed. You
+can learn more about commands with the help function (try running just
+with option `-h` or `--help` or on Linux/Mac OS X, `man
+command_name`).
 
 
+### Paths
+
+A *path* consists of *directory names* separated by forward-slashes
+"`/`" and possibly a final *file name*. 
+
+* `/` (the actual name of the "root" directory)
+* `/home/dvader` or `/Users/dvader`
+* `/usr/bin/nano`
+* `books.txt`
+* `/Users/dvader/Documents/deathstar/weaknesses.pdf`
+* `Documents/deathstar/weaknesses.pdf`
+
+Paths starting with `/` are called *absolute paths*; anything else is
+a *relative* path, starting from the current working directory (check
+with `pwd`).
+
+### Moving around
+
+Assume user dvader has the following directory layout in his *home
+directory* `/Users/dvader`:
+
+~~~
+/Users/dvader/
+	     Documents/
+		      deathstar/
+			       weaknesses.pdf
+			       electrical_bill.dat
+		      jedi_jokes/
+	     data/
+		 planets.dat
+		 bases
+~~~
+                      
+If he executes the `cd` command
+
+{% highlight bash %}
+cd /Users/dvader/Documents/deathstar
+{% endhighlight %}
+
+then he will have moved to the `deathstar` directory.
+
+The `cd` command took an *argument*, the directory to go to.
+
+{% highlight bash %}
+pwd
+{% endhighlight %}
+
+will print
+
+~~~
+/Users/dvader/Documents/deathstar
+~~~
+{: .output}
+
+If he runs
+
+{% highlight bash %}
+ls
+{% endhighlight %}
+
+he will see 
+
+~~~ 
+electrical_bill.dat  weaknesses.pdf
+~~~
+{: .output}
+
+In order to get to the `data` directory he could use the command `cd
+/Users/dvader/data` but instead he uses the *special directory* `..`
+(which means "the directory above this one"):
+
+{% highlight bash %}
+cd ../../data
+{% endhighlight %}
+
+(Use the `TAB` key while typing: *autocompletion* is one of the best
+features of the shell! The other great interactive feature is the
+history: try using the cursor-up and -down keys.)
+
+A second special directory is `.` ("this directory"). `.` and `..`
+are understood by all commands.
+
+### Activity
+
+* What does the following sequence of commands show?
+
+  {% highlight bash %}
+  cd
+ls -a
+  {% endhighlight %}
+
+* Go to the `bin` directory that is located in the `usr` directory,
+which itself is located in the root directory. List the files there.
+
+
+### Tips to make your life easy
+
+* Use the shell's `TAB` completion and up/down to get commands that
+  you already typed. (Also try out `Control`+`R` (`^R`) to search
+  through your shell *history*)
+* Use `cd ..` to go up, `cd ../..` to go up twice etc.
+* Use `cd -` to go to *the previous directory I was in* (only works
+  for `cd`).
+* Use the tilde character `~` for your home directory, e.g. `cd
+  ~/Documents` is equivalent to `cd /Users/dvader/Documents`.
+
+
+## Copy, rename, delete
+
+* `mkdir` (make directory)
+* `cp` (copy file, `cp -r` copy recursively, including directories)
+* `mv` (move, i.e. rename)
+* `rmdir` (remove empty directory)
+* `rm` (remove file, `rm -r` remove recursively (**dangerous!**))
 
 
