finished shell lesson
Maybe add more on globbing

--- a/_posts/2016-01-14-01_Unix_Shell.md
+++ b/_posts/2016-01-14-01_Unix_Shell.md
@@ -139,7 +139,7 @@ directory* `/Users/dvader`:
 		      deathstar/
 			       weaknesses.pdf
 			       electrical_bill.dat
-		      jedi_jokes/
+		      work/
 	     data/
 		 planets.dat
 		 bases
@@ -196,15 +196,20 @@ are understood by all commands.
 
 ### Activity
 
-* What does the following sequence of commands show?
+1. What does the following sequence of commands show?
 
-  {% highlight bash %}
-  cd
-ls -a
-  {% endhighlight %}
+        cd
+        ls -a
 
-* Go to the `bin` directory that is located in the `usr` directory,
-which itself is located in the root directory. List the files there.
+2. Go to the `bin` directory that is located in the `usr` directory,
+   which itself is located in the root directory. List the files
+   there. Did you find "nano" and "grep"?
+3. What does `ls -R /usr` show? (Try `^C`...)
+4. Try other options of `ls` such as `-sh` or `-sha`. --- ask `ls` for
+   help!
+5. Is there a difference between `ls -sha`, `ls -ash`, and `ls -a -s
+   -h`?
+
 
 
 ### Tips to make your life easy
@@ -221,10 +226,225 @@ which itself is located in the root directory. List the files there.
 
 ## Copy, rename, delete
 
+### Commands
+
 * `mkdir` (make directory)
 * `cp` (copy file, `cp -r` copy recursively, including directories)
 * `mv` (move, i.e. rename)
 * `rmdir` (remove empty directory)
 * `rm` (remove file, `rm -r` remove recursively (**dangerous!**))
 
+### Directory structure for the class
+
+Make a directory `PHY494` in your home directory for the class and
+inside it, one called `01_shell` for today's lesson:
+
+{% highlight bash %}
+cd ~
+mkdir PHY494
+cd PHY494
+mkdir 01_shell
+{% endhighlight %}
+
+Note: 
+
+* *Avoid spaces and most special characters in file names.* All
+  letters and numbers together with underscore `_`, minus sign `-`,
+  and period `.` are ok.
+* Plain `mkdir` cannot create multiple directories deep in one go
+  unless you have the `-p` option (check!).
+
+### Activity
+
+1. Inside your `01_shell` directory, create three directories, `data`
+   and `Documents/work`.
+2. Go to `Documents/work`
+
+### Creating text files with a text editor
+
+Run `nano`:
+{% highlight bash %}
+nano
+{% endhighlight %}
+
+You should see something like this:
+
+![Nano screenshot]({{site.baseurl}}/{{site.figs}}/nano.png)
+
+(Note: for real work use a more powerful editor such as
+[Emacs](http://www.gnu.org/software/emacs/) or
+[Vim](http://www.vim.org/) (both of which come with a steep learning
+curve), or a graphical editor such as
+[Gedit](http://projects.gnome.org/gedit/). On Windows, a free editor is
+[Notepad++](http://notepad-plus-plus.org/).)
+
+Create a todo list with content
+
+    Plan for today:
+
+    1. find rebel base
+    2. destroy!
+
+Save it to file 'TODO' with the command `^O TODO` and exit with
+`^X`. Check that the file is there with `ls`.
+
+### Activity
+
+1. Make a backup (call it `TODO.bak`) of the TODO list with the `cp`
+   command.
+2. Rename `TODO` to `TODO.txt` with the `mv` command.
+3. Make a directory `notes` under the `data` directory: You should now
+   have a directory tree similar to
+
+        ~/PHY494/01_shell/
+                          Documents/
+                                    work/
+                                         TODO.txt
+                                         TODO.bak
+                          data/
+                              notes/
+
+   Check with `ls -R ~/PHY494`.
+4. Put a copy of `TODO.txt` into the `notes` directory (using `cp`).
+5. Create a new text file `data/notes/hints.txt` and write any
+   [hints](https://en.wikipedia.org/wiki/Ice_planet)  for possible
+   rebel bases into this file.
+6. Make a copy of your `notes` directory in your work directory:
+
+        ~/PHY494/01_shell/
+                          Documents/
+                                    work/
+                                         TODO.txt
+                                         TODO.bak
+                                         notes/
+                                              TODO.txt
+                                              hints.txt
+                          data/
+                              notes/
+                                    TODO.txt
+                                    hints.txt
+
+7. Remove `data/notes/hints.txt` with `rm`.
+8. Remove `data/notes` with `rmdir`. (Hint: Read the error message!)
+9. Move `work/notes/hints.txt` into the `work` directory.
+10. Remove the useless `work/notes` directory with `rm -r` (careful !)
+
+Note: all these commands can also work on multiple filenames.
+
+## Pipes and Filters
+
+### Commands
+
+* `cat`
+* `head`
+* `tail`
+* `less`
+* `wc`
+* `sort`
+* `uniq`
+* `cut`
+* `grep`
+
+and special shell characters
+
+* `|` ("pipe", joins commands together)
+* `>` (redirects output to a file)
+* `<` (redirects file to input)
+
+### Working with redirection and command pipelines
+
+Download [planets.dat]({{ site.baseurl }}/{{ site.data }}/planets.dat)
+and put it in the directory `data/`. (You can do this with your web
+browser or if you have the `curl` program installed, try `curl
+{{site.url}}{{site.baseurl}}/{{site.data}}/planets.dat -O`.)
+
+Output the whole file to the screen:
+
+{% highlight bash %}
+cat planets.txt
+{% endhighlight %}
+
+Make a file in which all planets are duplicated:
+
+{% highlight bash %}
+cat planets.txt planets.txt > planets_2.txt
+{% endhighlight %}
+
+
+Look at the first three lines of the file
+
+{% highlight bash %}
+head -3 planets.txt
+{% endhighlight %}
+
+should give
+
+~~~
+Alderaan             12500  grasslands/mountains
+Yavin_IV             10200  jungle/rainforests
+Hoth                  7200  tundra/icecaves/mountainranges
+~~~
+{: .output}
+
+Count the number of planets
+
+{% highlight bash %}
+wc planets.dat
+{% endhighlight %}
+
+~~~
+      60     180    2944 planets.dat
+~~~
+{: .output}
+
+`wc -l` gives just the number of lines.
+
+Sort by name and look at the first five using a **pipes** and
+**filters**:
+
+{% highlight bash %}
+sort planets.txt | head -5
+{% endhighlight %}
+
+Sort by diameter (column 2), biggest first, and write the top 3 to a
+file `biggest_planets`:
+
+{% highlight bash %}
+sort -k2,2 -n planets.txt | head -5 > biggest_planets
+{% endhighlight %}
+
+Count the number of planets with unknown diameter:
+
+{% highlight bash %}
+grep "unknown" planets.txt | wc -l
+{% endhighlight %}
+
+Get the first letter of each planet name and sort alphabetically:
+
+{% highlight bash %}
+cut -b 1,1 planets.txt | sort
+{% endhighlight %}
+
+### Activity
+
+1. Count the number of planets in `planets_2.txt`.
+2. Find planets where the rebel might have a base (hint: you know it's
+   cold there... use `grep`). How many planets will you investigate
+   more closely?
+3. What is the most frequent and the least frequent first letter
+   amongst these planets? (Hint: `uniq -c`)
+
+
+### Shell glob patterns
+
+Use the character `*` to match "any part of a file name", e.g.
+
+{% highlight bash %}
+ls *.txt
+{% endhighlight %}
+
+will list all files ending in `.txt`.
+
+The `?` character matches a single character. Neither of them matches
+a leading `.` in a file name or a space.
 
