mini git, globbing, cut/paste, script

--- a/_posts/2016-01-14-01_Unix_Shell.md
+++ b/_posts/2016-01-14-01_Unix_Shell.md
@@ -18,7 +18,7 @@ Shell](http://swcarpentry.github.io/shell-novice/).
 2. [Tutorial](#tutorial)
 
 
-## Background and Motivation
+# Background and Motivation
 
 As a computational scientist you have one primary tool at your hand: a
 computer. And like an experimental scientist, you will have to be able
@@ -47,9 +47,9 @@ ways, and automating tasks. On a
 (typically used for high-performance computing) using the shell is a
 very powerful (and essential) way to interact with the computer.
 
-## Tutorial
+# Tutorial
 
-### Accessing the shell
+## Accessing the shell
 
 * On a typical **Linux** system you open an application called
   *terminal* or *xterm* or *kterm* (or similar).
@@ -214,9 +214,14 @@ are understood by all commands.
 
 ### Tips to make your life easy
 
-* Use the shell's `TAB` completion and up/down to get commands that
-  you already typed. (Also try out `Control`+`R` (`^R`) to search
-  through your shell *history*)
+* Use the shell's convenience features:
+  * `TAB` completion 
+  * up/down arrow to get commands that you already typed. 
+  * `history` shows all the commands you typed so far
+  * Try out `Control`+`R` (`^R`) to search through your shell
+    *history*.
+  * `^A` and `^E` will likely take you to the beginning and end of a
+    line
 * Use `cd ..` to go up, `cd ../..` to go up twice etc.
 * Use `cd -` to go to *the previous directory I was in* (only works
   for `cd`).
@@ -285,8 +290,8 @@ Create a todo list with content
     1. find rebel base
     2. destroy!
 
-Save it to file 'TODO' with the command `^O TODO` and exit with
-`^X`. Check that the file is there with `ls`.
+Save it to file 'TODO' with the command `^O` and type the file name
+`TODO` and exit with `^X`. Check that the file is there with `ls`.
 
 ### Activity
 
@@ -309,7 +314,9 @@ Save it to file 'TODO' with the command `^O TODO` and exit with
 5. Create a new text file `data/notes/hints.txt` and write any
    [hints](https://en.wikipedia.org/wiki/Ice_planet)  for possible
    rebel bases into this file.
-6. Make a copy of your `notes` directory in your work directory:
+6. Open `TODO.txt` in `nano` and add a note to item 1 too look in the
+   hints.txt file. Save and exit.
+7. Make a copy of your `notes` directory in your work directory:
 
         ~/PHY494/01_shell/
                           Documents/
@@ -324,10 +331,13 @@ Save it to file 'TODO' with the command `^O TODO` and exit with
                                     TODO.txt
                                     hints.txt
 
-7. Remove `data/notes/hints.txt` with `rm`.
-8. Remove `data/notes` with `rmdir`. (Hint: Read the error message!)
-9. Move `work/notes/hints.txt` into the `work` directory.
-10. Remove the useless `work/notes` directory with `rm -r` (careful !)
+8. Remove `data/notes/hints.txt` with `rm`.
+9. Remove `data/notes` with `rmdir`. (Hint: Read the error message!)
+10. Move `work/notes/hints.txt` into the `work` directory.
+11. Remove the useless `work/notes` directory with `rm -r` (careful !)
+
+**WARNING: There is no "Trashcan" or built in backup. Once you `rm`
+something, it is gone.** Be especially careful with `rm -r`.
 
 Note: all these commands can also work on multiple filenames.
 
@@ -342,7 +352,7 @@ Note: all these commands can also work on multiple filenames.
 * `wc`
 * `sort`
 * `uniq`
-* `cut`
+* `cut` and `paste`
 * `grep`
 
 and special shell characters
@@ -354,27 +364,32 @@ and special shell characters
 ### Working with redirection and command pipelines
 
 Download [planets.dat]({{ site.baseurl }}/{{ site.data }}/planets.dat)
-and put it in the directory `data/`. (You can do this with your web
-browser or if you have the `curl` program installed, try `curl
-{{site.url}}{{site.baseurl}}/{{site.data}}/planets.dat -O`.)
+and put it in the directory `data/`. You can do this with your web
+browser or if you have the `curl` program installed, try 
+
+{% highlight bash %}
+curl {{site.url}}{{site.baseurl}}/{{site.data}}/planets.dat -O
+{% endhighlight %}
+
+(all on one line).
 
 Output the whole file to the screen:
 
 {% highlight bash %}
-cat planets.txt
+cat planets.dat
 {% endhighlight %}
 
 Make a file in which all planets are duplicated:
 
 {% highlight bash %}
-cat planets.txt planets.txt > planets_2.txt
+cat planets.dat planets.dat > planets_2.dat
 {% endhighlight %}
 
 
 Look at the first three lines of the file
 
 {% highlight bash %}
-head -3 planets.txt
+head -3 planets.dat
 {% endhighlight %}
 
 should give
@@ -397,37 +412,48 @@ wc planets.dat
 ~~~
 {: .output}
 
-`wc -l` gives just the number of lines.
+
+#### Activity
+
+1. Test `wc -l` gives just the number of lines ("60").
+2. What does `wc planets.dat planets_2.dat` do?
+3. What happens when you do `wc < planets.dat`?
+4. Run `wc` then type any number of lines of text (pressing enter
+   to terminate each line) and when you get bore, press `^D`
+   (control+D). What happened?
+
+#### Pipes
 
 Sort by name and look at the first five using a **pipes** and
 **filters**:
 
 {% highlight bash %}
-sort planets.txt | head -5
+sort planets.dat | head -5
 {% endhighlight %}
 
 Sort by diameter (column 2), biggest first, and write the top 3 to a
 file `biggest_planets`:
 
 {% highlight bash %}
-sort -k2,2 -n planets.txt | head -5 > biggest_planets
+sort -k2,2 -n planets.dat | head -5 > biggest_planets
 {% endhighlight %}
 
 Count the number of planets with unknown diameter:
 
 {% highlight bash %}
-grep "unknown" planets.txt | wc -l
+grep "unknown" planets.dat | wc -l
 {% endhighlight %}
 
 Get the first letter of each planet name and sort alphabetically:
 
 {% highlight bash %}
-cut -b 1,1 planets.txt | sort
+cut -b 1,1 planets.dat | sort
 {% endhighlight %}
+
 
 ### Activity
 
-1. Count the number of planets in `planets_2.txt`.
+1. Count the number of planets in `planets_2.dat`.
 2. Find planets where the rebel might have a base (hint: you know it's
    cold there... use `grep`). How many planets will you investigate
    more closely?
@@ -440,11 +466,120 @@ cut -b 1,1 planets.txt | sort
 Use the character `*` to match "any part of a file name", e.g.
 
 {% highlight bash %}
-ls *.txt
+ls *.dat
 {% endhighlight %}
 
-will list all files ending in `.txt`.
+will list all files ending in `.dat`.
 
 The `?` character matches a single character. Neither of them matches
 a leading `.` in a file name or a space.
 
+
+## Using `git` to get data for the class ##
+
+`git` is a version control software and we will come back to explain
+its main functionality later. Right now we use it as a convenient tool
+to get additional data. 
+
+There is a "repository" at
+<https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-resources>
+that contains data and code to be used during the class. It will be
+updated as we go along.
+
+Get the data for today by **cloning** the repository:
+
+~~~
+cd ~
+git clone https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-resources.git
+~~~
+
+(You only need to do this *once*.)
+
+At any later time, **pull** in the latest updates from inside the
+repository::
+
+~~~
+cd PHY494-resources
+git pull
+~~~
+
+(This can be done as often as you like.)
+
+Go into the `PHY494-resources/01_shell/data` directory.
+
+### Activity
+
+1. Read the `README` file (e.g. using `nano` or `cat` or `less` (for
+the latter, use `h` to get help and `q` to quit)).
+
+2. Count the number of entries in *all files ending in "csv"*. (Hint:
+use a glob pattern)
+
+3. Use `cut -f 1  -d ',' people.csv` to extract each name to a file
+`names` and a similar command to extract weight to a file `weights`.
+
+4. Use the `paste` command to generate a new list that contains
+   "weight name" (reordered and separated by space):
+
+        paste weights names
+
+   Use this approach to sort the people in order of decreasing weight.
+
+## Shell scripts
+
+You can save commands in a file. This is called a **script**.
+
+Make directory for your scripts `~/bin`.
+
+Using`nano`, create the following script `~/bin/update_resources.sh`:
+
+{% highlight bash %}
+# PHY 494 script to update the resources repository
+
+GIT_REPOSITORY="${HOME}/PHY494-resources"
+
+cd "${GIT_REPOSITORY}"
+git pull
+
+echo "Updated resources in ${GIT_REPOSITORY}"
+{% endhighlight %}
+
+Execute the script with
+
+{% highlight bash %}
+bash ~/bin/update_resources.sh
+{% endhighlight %}
+
+Notes:
+
+* The line starting with `#` is a *comment*: it is not a shell command
+  and is ignored by the shell. However, adding comments to scripts is
+  **a really, really good idea!**
+
+* The shell has **variables**: Some like `HOME` are pre-defined,
+  others you can define yourself (`GIT_REPOSITORY=...`). Using
+  all-caps is a convention that you should follow.
+
+  The contents (value) of variables is accessed with the dollar `$`
+  sign in front of the variable name.
+
+* `echo` prints to the standard output (typically, the screen)
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+{% comment %}
+# Footnotes
+
+Note: Star Wars data courtesy of [SWAPI](https://swapi.co/).
+{% endcomment %}
