weblink to Debian man page interface

--- a/_posts/2016-01-14-01_Unix_Shell.md
+++ b/_posts/2016-01-14-01_Unix_Shell.md
@@ -108,8 +108,11 @@ command_name -v -o optarg --long-opt  arg1 arg2
 
 Often, omitting the argument also works and a default is assumed. You
 can learn more about commands with the help function (try running just
-with option `-h` or `--help` or on Linux/Mac OS X, `man
-command_name`).
+with option `-h` or `--help` or on Linux/Mac OS X, `man command_name`;
+the *Git Bash* installation does not come with man pages but you can
+use services on the web such as the
+[Debian man pages](http://manpages.debian.org/cgi-bin/man.cgi)).
+
 
 
 ### Paths
