more sorting activity

--- a/_posts/2016-01-14-01_Unix_Shell.md
+++ b/_posts/2016-01-14-01_Unix_Shell.md
@@ -453,14 +453,21 @@ Get the first letter of each planet name and sort alphabetically:
 cut -b 1,1 planets.dat | sort
 {% endhighlight %}
 
+Get the terrain types
+
+{% highlight bash %}
+cut -b 29-  planets.dat
+{% endhighlight %}
 
 ### Activity
 
 1. Count the number of planets in `planets_2.dat`.
 2. Find planets where the rebel might have a base (hint: you know it's
    cold there... use `grep`). How many planets will you investigate
-   more closely?
-3. What is the most frequent and the least frequent first letter
+   more closely? Write the list to the file `bases`.
+3. How many *unique* terrain types are there? (Hint: `uniq` needs a
+   sorted list as input)
+4. What is the most frequent and the least frequent first letter
    amongst these planets? (Hint: `uniq -c`)
 
 
