added table of contents sub sections (manually... :-p)

--- a/_posts/2016-01-14-01_Unix_Shell.md
+++ b/_posts/2016-01-14-01_Unix_Shell.md
@@ -16,7 +16,12 @@ Shell](http://swcarpentry.github.io/shell-novice/).
 
 1. [Background and Motivation](#background-and-motivation)
 2. [Tutorial](#tutorial)
-
+    * [Accessing the shell](#accessing-the-shell)
+    * [Navigating Files and Directories](#navigating-files-and-directories)
+	* [Copy, rename, delete](#copy-rename-delete)
+	* [Pipes and Filters](#pipes-and-filters)
+	* [Using `git` to get data for the class](#using-git-to-get-data-for-the-class)
+	* [Shell scripts](#shell-scripts)
 
 # Background and Motivation
 
