reordered cat activity

--- a/_posts/2016-01-14-01_Unix_Shell.md
+++ b/_posts/2016-01-14-01_Unix_Shell.md
@@ -387,13 +387,6 @@ Output the whole file to the screen:
 cat planets.dat
 {% endhighlight %}
 
-Make a file in which all planets are duplicated:
-
-{% highlight bash %}
-cat planets.dat planets.dat > planets_2.dat
-{% endhighlight %}
-
-
 Look at the first three lines of the file
 
 {% highlight bash %}
@@ -420,14 +413,22 @@ wc planets.dat
 ~~~
 {: .output}
 
+Make a file in which all planets are duplicated:
+
+{% highlight bash %}
+cat planets.dat planets.dat > planets_2.dat
+{% endhighlight %}
+
+(`cat` concatenates files and then you redirect it to a new file.)
+
 
 #### Activity
 
-1. Test `wc -l` gives just the number of lines ("60").
+1. Test that `wc -l` gives just the number of lines ("60").
 2. What does `wc planets.dat planets_2.dat` do?
 3. What happens when you do `wc < planets.dat`?
 4. Run `wc` then type any number of lines of text (pressing enter
-   to terminate each line) and when you get bore, press `^D`
+   to terminate each line) and when you get bored, press `^D`
    (control+D). What happened?
 
 #### Pipes
