fixed: biggest planets example

--- a/_posts/2016-01-14-01_Unix_Shell.md
+++ b/_posts/2016-01-14-01_Unix_Shell.md
@@ -440,11 +440,12 @@ Sort by name and look at the first five using a **pipes** and
 sort planets.dat | head -5
 {% endhighlight %}
 
-Sort by diameter (column 2), biggest first, and write the top 3 to a
-file `biggest_planets`:
+Sort by diameter (`-k2,2` is column 2 and numeric sort `-n`), biggest
+first (`-r` reverse sort), and write the top 3 to a file
+`biggest_planets`:
 
 {% highlight bash %}
-sort -k2,2 -n planets.dat | head -5 > biggest_planets
+sort -k2,2 -n -r planets.dat | head -3 > biggest_planets
 {% endhighlight %}
 
 Count the number of planets with unknown diameter:
