clarified git update script

--- a/_posts/2016-01-14-01_Unix_Shell.md
+++ b/_posts/2016-01-14-01_Unix_Shell.md
@@ -544,9 +544,22 @@ use a glob pattern)
 
 ## Shell scripts
 
-You can save commands in a file. This is called a **script**.
+You can save commands in a file. This is called a **script**. A script
+allows you to reuse commands (laziness is a programmer's virtue!)
+without having to retype them over and over again. It also allows you
+to solve a task once and then forget about how you did it in detail
+because it is written in the script.
 
-Make directory for your scripts `~/bin`.
+Make directory `~/bin` for your scripts in your home directory.
+
+{% highlight bash %}
+mkdir ~/bin
+{% endhighlight %}
+
+(I strongly suggest you do this really in your home directory because
+in the following I will assume it; if you changed the path to
+e.g. `~/classes/2016/PHY494/bin` then you will need to use that path
+in all the following examples.)
 
 Using`nano`, create the following script `~/bin/update_resources.sh`:
 
@@ -561,13 +574,14 @@ git pull
 echo "Updated resources in ${GIT_REPOSITORY}"
 {% endhighlight %}
 
-Execute the script with
-
-{% highlight bash %}
-bash ~/bin/update_resources.sh
-{% endhighlight %}
+(You create the script by (1) `nano ~/bin/update_resources.sh` (opens
+empty file if it does not exist), (2) type all the lines into the
+editor (or copy & paste), (3) save the file and exit the editor.)
 
 Notes:
+
+* *All* the lines above should be in your file (first line will start
+  with `# PHY 494` and the last line will begin with `echo`).
 
 * The line starting with `#` is a *comment*: it is not a shell command
   and is ignored by the shell. However, adding comments to scripts is
@@ -581,18 +595,23 @@ Notes:
   sign in front of the variable name.
 
 * `echo` prints to the standard output (typically, the screen)
-  
 
+Execute the script with
 
+{% highlight bash %}
+bash ~/bin/update_resources.sh
+{% endhighlight %}
 
+It should show output similar to 
 
+~~~
+Already up-to-date.
+Updated resources in /Users/oliver/PHY494-resources
+~~~
 
-
-
-
-
-
-
+However, during the course of the year more data will be added to the
+repository and then you can just run your update command to get the
+data.
 
 
 {% comment %}
