example git pull output

--- a/_posts/2016-01-14-01_Unix_Shell.md
+++ b/_posts/2016-01-14-01_Unix_Shell.md
@@ -611,8 +611,24 @@ Updated resources in /Users/oliver/PHY494-resources
 
 However, during the course of the year more data will be added to the
 repository and then you can just run your update command to get the
-data.
+data and you might see output like the following:
 
+~~~
+remote: Counting objects: 15, done.
+remote: Compressing objects: 100% (10/10), done.
+remote: Total 15 (delta 2), reused 15 (delta 2), pack-reused 0
+Unpacking objects: 100% (15/15), done.
+From https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-resources
+   c3b5c04..23a4083  master     -> origin/master
+Updating c3b5c04..23a4083
+Fast-forward
+ 01_shell/bin/update_resources.sh | 8 ++++++++
+ 02_python/gutentag.py            | 4 ++++
+ 2 files changed, 12 insertions(+)
+ create mode 100644 01_shell/bin/update_resources.sh
+ create mode 100644 02_python/gutentag.py
+Updated resources in /Users/oliver/PHY494-resources
+~~~
 
 {% comment %}
 # Footnotes
