01: footnote linking to SWAPI and the code to pull data

--- a/_posts/2016-01-14-01_Unix_Shell.md
+++ b/_posts/2016-01-14-01_Unix_Shell.md
@@ -371,9 +371,9 @@ and special shell characters
 
 ### Working with redirection and command pipelines
 
-Download [planets.dat]({{ site.baseurl }}/{{ site.data }}/planets.dat)
+Download [planets.dat]({{site.baseurl}}/{{site.data}}/planets.dat)[^1]
 and put it in the directory `data/`. You can do this with your web
-browser or if you have the `curl` program installed, try 
+browser or if you have the `curl` program installed, try
 
 {% highlight bash %}
 curl {{site.url}}{{site.baseurl}}/{{site.data}}/planets.dat -O
@@ -630,8 +630,12 @@ Fast-forward
 Updated resources in /Users/oliver/PHY494-resources
 ~~~
 
-{% comment %}
-# Footnotes
 
-Note: Star Wars data courtesy of [SWAPI](https://swapi.co/).
-{% endcomment %}
+#### Footnotes ####
+
+[^1]:
+
+	Star Wars data courtesy of [SWAPI](https://swapi.co/). See
+	[PHY494-auxilliary/star_wars](https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-auxilliary/tree/master/star_wars)
+	for Python code to pull the data from SWAPI.
+
