--- a/_posts/2016-02-16-08_ODEs.md
+++ b/_posts/2016-02-16-08_ODEs.md
@@ -13,30 +13,34 @@ classify it as an
 the $$n$$-th derivative:
 
 $$
-F(x, y, y^{(1)},  \dots, y^{(n)}) = 0
+F(t, y, y^{(1)},  \dots, y^{(n)}) = 0
 $$
 
-The *dependent* variable $$y = y(x)$$ is a function of *independent variable* $$x$$ and
-$$y^{(n)} = \frac{d^{n}y}{dx^{n}}$$ is the $$n$$-th derivative with
-respect to $$x$$. A *linear ODE* only contains first powers of $$y$$
-or its derivatives. A *non-linear ODE* may contain higher
-powers. There often exist methods to solve linear ODEs analytically
-but this is impossible for most non-linear ODEs. Solutions of an ODE
-are fixed by the initial conditions[^1], e.g., $$y_0 = y(x_{0})$$ and
-similar for all higher derivatives. For an ODE of order $$n$$, exactly
-$$n$$ initial conditions are needed. 
+The *dependent* variable $$y = y(t)$$ is a function of the
+*independent variable* $$t$$ and $$y^{(n)} = \frac{d^{n}y}{dt^{n}}$$
+is the $$n$$-th derivative with respect to $$t$$. A *linear ODE* only
+contains first powers of $$y$$ or its derivatives. A *non-linear ODE*
+may contain higher powers. There often exist methods to solve linear
+ODEs analytically but this is impossible for most non-linear
+ODEs. Solutions of an ODE are fixed by the initial conditions[^1],
+e.g., $$y_0 = y(t_{0})$$ and similar for all higher derivatives. For
+an ODE of order $$n$$, exactly $$n$$ initial conditions are needed.
 
 Using ODE integration algorithms (*integrators*) we can solve linear
 *and* non-linear ODEs of any order *numerically*. The basic idea is to
 start with the initial conditions and then propagate $$y$$ for a small
-step $$h$$ to numerically compute $$y(x_0 + h)$$ and all its
+step $$h$$ to numerically compute $$y(t_0 + h)$$ and all its
 derivatives. By repeating the process, one *extrapolates* from the
-initial condition to any "later" value of $$x$$.
+initial condition to any "later" value of $$t$$.
 
-We will first study the simplest integrator, the *Euler* scheme, and
+We will first study the simplest integrator, the *Euler* algorithm, and
 then look at a more robust class of integrators, the *Runge-Kutta*
 schemes.
 
+The Jupyter notebook
+[08_ODEs.ipynb](http://nbviewer.jupyter.org/format/slides/github/ASU-CompMethodsPhysics-PHY494/PHY494-resources/blob/master/08_ODEs/08_ODEs-students-1.ipynb#/)
+contains the lecture notes and skeleton code for in-class problem
+exercises.[^2]
 
 Additional resources:
 
@@ -66,3 +70,8 @@ Additional resources:
      difficult Eigenvalue problems and will not be considered in this
      lesson.
 	 
+[^2]:
+
+     As usual, `git pull` the resources repository to get a local copy
+     of the notebook. Then copy the notebook into your work directory
+     in order to complete the exercises.
