updated links to notebooks for 08 ODEs
- lecture slides linked
- student notebooks linked
- more text (part 1 and part 2)

Note: the integrators.py in resources is still incomplete so
      not all of the notebooks will just run: you still have to
      add code yourself.

--- a/_posts/2016-02-16-08_ODEs.md
+++ b/_posts/2016-02-16-08_ODEs.md
@@ -37,12 +37,35 @@ We will first study the simplest integrator, the *Euler* algorithm, and
 then look at a more robust class of integrators, the *Runge-Kutta*
 schemes.
 
+## ODEs, standard form, and principles of integrators
+
+The first part of this lesson introduces the formalism and the basic
+ideas behind integration algorithms.
+
 The Jupyter notebook
 [08_ODEs.ipynb](http://nbviewer.jupyter.org/format/slides/github/ASU-CompMethodsPhysics-PHY494/PHY494-resources/blob/master/08_ODEs/08_ODEs.ipynb#/)
-contains the lecture notes and skeleton code for in-class problem
-exercises.[^2]
+contains the lecture notes. Skeleton code for in-class problem
+exercises is in
+[08_ODEs-students-1.ipynb](https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-resources/blob/master/08_ODEs/08_ODEs-students-1.ipynb).[^2]
 
-Additional resources:
+## Accuracy and performance of Euler and Runge-Kutta integrators
+
+The second part shows how to assess the accuracy of integration
+algorithms and analyzes in more depth the simple
+[Euler integrator](https://en.wikipedia.org/wiki/Euler_method) and the
+[Runge-Kutta methods](https://en.wikipedia.org/wiki/Runge%E2%80%93Kutta_methods),
+namely `rk2` and `rk4` (and `rk45`). As examples we use the simple 1D
+harmonic oscillator with potential energy function $$U(x) =
+\frac{1}{2} k x^2$$, an anharmonic oscillator ($$U(x) = \frac{1}{2} k
+x^2 (1-\frac{2}{3} \alpha x)$$), and a 6-th power oscillator ($$U(x) =
+\frac{1}{6} k x^6$$).
+
+The Jupyter notebook
+[08_ODE_integrators.ipynb](http://nbviewer.jupyter.org/format/slides/github/ASU-CompMethodsPhysics-PHY494/PHY494-resources/blob/master/08_ODEs/08_ODE_integrators.ipynb#/)
+contains the lecture notes. Skeleton code for in-class problem
+exercises can be found in the notebook [08_ODE_integrators-students-1.ipynb](https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-resources/blob/master/08_ODEs/08_ODE_integrators-students-1.ipynb).[^2]
+
+#### Additional resources:
 
 * _Computational Physics_: Chapter **9**
 * [scipy.integrate](http://docs.scipy.org/doc/scipy/reference/integrate.html)
