--- a/_posts/2016-02-16-08_ODEs.md
+++ b/_posts/2016-02-16-08_ODEs.md
@@ -54,7 +54,7 @@ The second part shows how to assess the accuracy of integration
 algorithms and analyzes in more depth the simple
 [Euler integrator](https://en.wikipedia.org/wiki/Euler_method) and the
 [Runge-Kutta methods](https://en.wikipedia.org/wiki/Runge%E2%80%93Kutta_methods),
-namely `rk2` and `rk4` (and `rk45`). As examples we use the simple 1D
+namely `rk2` and `rk4`. As examples we use the simple 1D
 harmonic oscillator with potential energy function $$U(x) =
 \frac{1}{2} k x^2$$, an anharmonic oscillator ($$U(x) = \frac{1}{2} k
 x^2 (1-\frac{2}{3} \alpha x)$$), and a 6-th power oscillator ($$U(x) =
@@ -64,6 +64,14 @@ The Jupyter notebook
 [08_ODE_integrators.ipynb](http://nbviewer.jupyter.org/format/slides/github/ASU-CompMethodsPhysics-PHY494/PHY494-resources/blob/master/08_ODEs/08_ODE_integrators.ipynb#/)
 contains the lecture notes. Skeleton code for in-class problem
 exercises can be found in the notebook [08_ODE_integrators-students-1.ipynb](https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-resources/blob/master/08_ODEs/08_ODE_integrators-students-1.ipynb).[^2]
+
+## Verlet integrators
+
+The third part introduces a different class of integrators: time
+reversible (and symplectic) integrators such as the **velocity
+Verlet** algorithm, which have worse accuracy than e.g. RK4 but long
+term stability. Skeleton code for in-class problem
+exercises can be found in the notebook [08_ODE_integrators-students-1.ipynb](https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-resources/blob/master/08_ODEs/08_ODE_integrators-verlet-students-1.ipynb).[^2]
 
 #### Additional resources:
 
