--- a/_posts/2016-02-16-08_ODEs.md
+++ b/_posts/2016-02-16-08_ODEs.md
@@ -70,8 +70,12 @@ exercises can be found in the notebook [08_ODE_integrators-students-1.ipynb](htt
 The third part introduces a different class of integrators: time
 reversible (and symplectic) integrators such as the **velocity
 Verlet** algorithm, which have worse accuracy than e.g. RK4 but long
-term stability. Skeleton code for in-class problem
-exercises can be found in the notebook [08_ODE_integrators-students-1.ipynb](https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-resources/blob/master/08_ODEs/08_ODE-integrators-verlet-students-1.ipynb).[^2]
+term stability.
+
+The Jupyter notebook [08_ODE-integrators-verlet.ipynb](http://nbviewer.jupyter.org/github/ASU-CompMethodsPhysics-PHY494/PHY494-resources/blob/master/08_ODEs/08_ODE-integrators-verlet.ipynb) contains the lecture notes (which were
+life-coded); the make use of the module `integrators2.py`. Skeleton
+code for in-class problem exercises can be found in the notebook
+[08_ODE_integrators-students-1.ipynb](https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-resources/blob/master/08_ODEs/08_ODE-integrators-verlet-students-1.ipynb).[^2]
 
 #### Additional resources:
 
