12 LA: updated with link to student notebook
- links to repo notebooks (the one for lecture notes is currently dead but will
  come up after lecture)
- added footnote for repo pulling (also updated the footnote in 08 ODE)
- use a section Class Material

--- a/_posts/2016-02-16-08_ODEs.md
+++ b/_posts/2016-02-16-08_ODEs.md
@@ -72,6 +72,8 @@ reversible (and symplectic) integrators such as the **velocity
 Verlet** algorithm, which have worse accuracy than e.g. RK4 but long
 term stability.
 
+## Class material
+
 The Jupyter notebook [08_ODE-integrators-verlet.ipynb](http://nbviewer.jupyter.org/github/ASU-CompMethodsPhysics-PHY494/PHY494-resources/blob/master/08_ODEs/08_ODE-integrators-verlet.ipynb) contains the lecture notes (which were
 life-coded); the make use of the module `integrators2.py`. Skeleton
 code for in-class problem exercises can be found in the notebook
@@ -107,6 +109,7 @@ code for in-class problem exercises can be found in the notebook
 	 
 [^2]:
 
-     As usual, `git pull` the resources repository to get a local copy
-     of the notebook. Then copy the notebook into your work directory
-     in order to complete the exercises.
+     As usual, `git pull` the
+     [resources repository](https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-resources)
+     to get a local copy of the notebook. Then copy the notebook into
+     your work directory in order to complete the exercises.
