--- a/_posts/2016-02-02-05_More_errors.md
+++ b/_posts/2016-02-02-05_More_errors.md
@@ -11,11 +11,13 @@ typically decreases with increasing the computational cost and a
 round-off error, which increases with the number of operations or the
 computational cost.
 
+## Class material
+
 You can follow the lecture in the notebook
 [05_errors.ipynb](http://nbviewer.jupyter.org/github/ASU-CompMethodsPhysics-PHY494/PHY494-resources/blob/master/05_errors/05_errors.ipynb).
 
-Additional resources:
+#### Additional resources
 
-* _Computational Physics_: Ch 3
+* _Computational Physics_: Chapter **3**
 
 
