13 PDEs: link to student notebook and updated date

--- a/_posts/2016-04-07-PDEs.md
+++ b/_posts/2016-04-07-PDEs.md
@@ -51,7 +51,10 @@ Often, no analytic solutions can be found or the analytic solutions are unwieldy
 We will look at various [finite difference]({{site.baseurl}}{% post_url 2016-02-04-06_Differentiation%}) schemes (both explicit and implicit) to solve the different classes of PDEs.
 
 ## Class material
-(This page will be updated once material is being made available.)
+
+1. [13_PDEs-1.ipynb]({{site.nbviewer.resources}}/13_PDEs/13_PDEs.ipynb):
+   Poisson's and Laplace's equation: Background, Gauss-Seidel and
+   Successive Over Relaxation algorithms, problems: [13_PDEs-1-Students.ipynb]({{site.nbviewer.resources}}/13_PDEs/13_PDEs-1-Students.ipynb)
 
 
 #### Additional resources  ####
