PDEs: added NR reference

--- a/_posts/2016-04-07-PDEs.md
+++ b/_posts/2016-04-07-PDEs.md
@@ -61,3 +61,6 @@ We will look at various [finite difference]({{site.baseurl}}{% post_url 2016-02-
 
 * _Computational Physics_, Ch 19--23
 * _[Partial differential equation](http://www.scholarpedia.org/article/Partial_differential_equation)_, Andrei D. Polyanin et al. (2008), Scholarpedia, 3(10):4605. doi: [10.4249/scholarpedia.4605](http://doi.org/doi:10.4249/scholarpedia.4605)
+* _[Numerical Recipes in C](http://apps.nrbook.com/c/index.html)_, WH
+  Press, SA Teukolsky, WT Vetterling, BP Flannery. 2nd
+  ed, 2002. Cambridge University Press. Chapter **19**.
