13: fixed link to class notebook

--- a/_posts/2016-04-07-PDEs.md
+++ b/_posts/2016-04-07-PDEs.md
@@ -52,7 +52,7 @@ We will look at various [finite difference]({{site.baseurl}}{% post_url 2016-02-
 
 ## Class material
 
-1. [13_PDEs-1.ipynb]({{site.nbviewer.resources}}/13_PDEs/13_PDEs.ipynb):
+1. [13_PDEs-1.ipynb]({{site.nbviewer.resources}}/13_PDEs/13_PDEs-1.ipynb):
    Poisson's and Laplace's equation: Background, Gauss-Seidel and
    Successive Over Relaxation algorithms, problems: [13_PDEs-1-Students.ipynb]({{site.nbviewer.resources}}/13_PDEs/13_PDEs-1-Students.ipynb)
 
