Typo fix in PDE lesson page

--- a/_posts/2016-04-07-PDEs.md
+++ b/_posts/2016-04-07-PDEs.md
@@ -29,7 +29,7 @@ $$
 
 ## Classes of second-order PDEs
 
-Second-order PDEs (highest partial derivatives are second order, such as $$U_{xz}$$ or $$U_{tt}$$) are ubiquitous in physics can be classified as
+Second-order PDEs (highest partial derivatives are second order, such as $$U_{xz}$$ or $$U_{tt}$$) are ubiquitous in physics and can be classified as
 
 * *elliptic* PDEs ($$AC - B^2 > 0$$, second derivatives of all variables and all with the same sign, e.g. Poisson's equation $$\nabla^2 U(x, y, z)  = U_{xx} + U_{yy} + U_{zz} = -4\pi\rho(x,y,z)$$);
 * *parabolic* PDEs ($$AC - B^2 = 0$$, second order derivative of one variable and first order derivative of the other one, e.g., the heat equation $$\nabla^2 U(x, y, z, t) - a \frac{\partial U}{\partial t} = 0$$);
