--- a/_posts/2016-04-07-13_PDEs.md
+++ b/_posts/2016-04-07-13_PDEs.md
@@ -54,7 +54,7 @@ We will look at various [finite difference]({{site.baseurl}}{% post_url 2016-02-
 
 1. [13_PDEs-1.ipynb]({{site.nbviewer.resources}}/13_PDEs/13_PDEs.ipynb):
    Poisson's and Laplace's equation: Background
-   ([board notes on PDEs (PDF)[{{site.resources.fileurl}}/13_PDEs/13_PDEs-1-LectureNotes.pdf]),
+   ([board notes on PDEs (PDF)]({{site.resources.fileurl}}/13_PDEs/13_PDEs-1-LectureNotes.pdf)),
    Gauss-Seidel and Successive Over Relaxation algorithms, problems:
    [13_PDEs-1-Students.ipynb]({{site.nbviewer.resources}}/13_PDEs/13_PDEs-1-Students.ipynb)
 
